# court-ocr-extract

./: .env.example  .gitignore  AGENTS.md  Dockerfile.gpu  README.md  pyproject.toml  requirements-gpu.txt  requirements-web.txt  requirements.txt
app/: __init__.py  main.py
app_fastapi/: main.py
app_streamlit/: main.py
config/: extraction_schema.json  fields.yaml  gpu_worker.yaml  local_model.yaml  marker_patterns.yaml  model_config.yaml  ocr_correction_dict.yaml  regex_patterns.yaml  settings.example.yaml
data/: README.md
docs/: README.md  annotation_guide.md  extraction_rules.md  ezycloudx_setup.md  field_definition.md  project_rebuild_prompt.md  security.md  security_notes.md  streamlit_vs_fastapi.md  workflow.md  workflow.mmd
prompts/: llm_correction_vn_court.md  llm_extraction_vn_court.md  local_extraction_prompt.txt  local_extraction_prompt_vi.txt  local_llm_extraction_prompt.txt  local_llm_json_repair_prompt.txt
scripts/: check_local_llm.py  cleanup_remote_worker.py  cleanup_sensitive_data.sh  debug_5_pdfs_bbox.py  evaluate_extraction.py  export_mermaid_workflow.py  ezycloudx_env_windows.ps1  ezycloudx_run_api.sh  ezycloudx_run_api_windows.ps1  ezycloudx_run_batch.sh  ezycloudx_run_batch_windows.ps1  ezycloudx_run_full_windows.ps1  ezycloudx_run_sample_windows.ps1  ezycloudx_setup.sh  ezycloudx_setup_windows.ps1  make_surya_correction_dataset.py  qa_batch_output.py  run_batch.py  run_remote_worker.py  run_single.py  transfer_server.py
templates/: excel_columns.json  upload.html
tests/: test_early_stop_pipeline.py  test_excel_mapping.py  (+12 more)
(+63 files in other folders)
