[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "court-ocr-extract"
version = "0.1.0"
description = "OCR va boc tach du lieu ban an toa an Viet Nam bang PyMuPDF va Surya OCR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "PyMuPDF>=1.24",
    "Pillow>=10.3",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "openpyxl>=3.1",
    "rapidfuzz>=3.9",
    "tqdm>=4.66",
    "typer>=0.12",
    "surya-ocr>=0.14"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5"
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "streamlit>=1.36"
]
gpu = [
    "torch",
    "transformers>=4.45",
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.2",
    "protobuf>=5",
    "gliner>=0.2",
    "vllm>=0.6; platform_system != 'Windows'"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
